--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --font-display: "Satoshi", "sans-serif";
-  --breakpoint-3xl: 120rem;
+  --font-poppins: "Poppins", sans-serif;
+  --breakpoint-3xl: 800px;
   --color-primary: oklch(53% 0.175 29.234);
   --color-secondary: oklch(1 0 0);
   --color-accent: oklch(0.452 0.313214 264.052 / 10.2%);
@@ -14,4 +14,8 @@
   --ease-fluid: cubic-bezier(0.3, 0, 0, 1);
   --ease-snappy: cubic-bezier(0.2, 0, 0, 1);
   /* ... */
+}
+
+body {
+  font-family: var(--font-poppins);
 }
